assets/less/modules/soul.less
@import "../theme";

@myhordes-badge-color: rgb(77, 80, 97);
div.tooltip.badge-tooltip {
    background: @myhordes-badge-color; outline: 1px solid darken(@myhordes-badge-color, 20%); border: 2px solid lighten(@myhordes-badge-color, 20%);
    color: white;
    &>b { display: block; font-size: 1.2em; border-bottom: 1px solid wheat; color: wheat; margin-bottom: 3px; }
}

.personal_desc {
  color: #f0d79e; background: url("../../img/icons/small_rp.gif") no-repeat 4px 1px, #996739; padding: 1px 1px 3px 25px; font-style: italic;
  font-size: 0.8em;
  &>div:first-child {
    margin-bottom: 5px; color: #ddab76; border-bottom: 2px solid #ddab76; text-transform: uppercase;
    font-weight: bold;
  }
  &>div:last-child > p { display: inline; margin: 0; }
}

#users-list-soul, #pm-users-list-container, #pm-add-users-list-container, #town-add-users-list-container {
    position: relative; overflow: visible;
    #users-list, #pm-users-list, #pm-add-users-list, #town-add-users-list {
        position: absolute; margin: 0; display: block; background: @myhordes-cell-header-background-color;
        width:300px; max-height: 200px; overflow: auto; z-index: 1; border: 1px solid @myhordes-smalltext;
        outline: 1px solid black; box-shadow: 0 0 3px black;
        &:empty { visibility: hidden; }

        .users-list-entry {
            margin-bottom: 4px; margin-right: 4px; cursor: pointer;
            &:hover { background: rgba(255,255,255,0.2); }
            div { text-overflow: ellipsis; cursor: pointer; font-size: .8em; font-variant: unset; text-transform: none; }
        }
    }

    input#users-search:not(.block) { width: 20rem; display: inline; }
}
/* ... */

